--- a/src/Eccube/Resource/template/admin/Customer/edit.twig
+++ b/src/Eccube/Resource/template/admin/Customer/edit.twig
@@ -116,6 +116,15 @@
                                 {{ form_errors(form.profile_image) }}
                             </div>
                         </div>
+
+                        <div id="shop_note_box" class="form-group">
+                            {{ form_label(form.note) }}
+                            <div class="col-sm-9 col-lg-10">
+                                {{ form_widget(form.note) }}
+                                {{ form_errors(form.note) }}
+                            </div>
+                        </div><!-- /.box -->
+
                         {# 名前 #}
                         <div id="detail_box__name" class="form-group">
                             {{ form_label(form.name) }}
@@ -348,17 +357,6 @@
                         </div>
                     </div><!-- /.box-body -->
                 </div><!-- /.box -->
-
-                <div id="shop_note_box" class="box">
-                    <div id="shop_note_box__header" class="box-header">
-                        <h3 class="box-title">ショップ用メモ欄</h3>
-                    </div><!-- /.box-header -->
-                    <div id="shop_note_box__note" class="box-body">
-                        {{ form_widget(form.note) }}
-                        {{ form_errors(form.note) }}
-                    </div>
-                </div><!-- /.box -->
-
             </div>
         </div><!-- /.col -->
     </form>
