--- a/src/Eccube/Resource/template/default/Farm/service_register.twig
+++ b/src/Eccube/Resource/template/default/Farm/service_register.twig
@@ -11,7 +11,6 @@
 {% endblock %}
 {% block main %}
     <div class="wrapper" id="service-regist-receiver-wrapper">
-
         <div class="farmer-header">
             <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="margin-top10">
         </div>
@@ -20,63 +19,78 @@
             <form id="service-form" method="post" action="{{ url('farm_service') }}">
                 <input type="hidden" name="mode" value="complete"/>
                 {{ form_widget(form._token) }}
-            <div id="confirm-area">
-                <div class="form-group">
-                    <label class="color888 title12">{{ form_label(form.customer_role) }}</label>
-                    <label class="title16">{{ form_widget(form.customer_role) }}</label>
-                </div>
+                <div id="confirm-area" class="col-lg-12">
+                    <div class="row">
+                    <div class="col-lg-12 col-sm-12">
+                        <div class="form-group">
+                            <label class="color888 title12">{{ form_label(form.customer_role) }}</label>
+                            <label class="title16">{{ form_widget(form.customer_role) }}</label>
+                        </div>
+                    </div>
 
-                <div class="form-group">
-                    <label class="color888 title12">{{ form_label(form.company_name) }}</label>
-                    <label class="title16">{{ form_widget(form.company_name) }}</label>
-                </div>
+                    <div class="col-lg-12 col-sm-12">
+                        <div class="form-group">
+                            <label class="color888 title12">{{ form_label(form.company_name) }}</label>
+                            <label class="title16">{{ form_widget(form.company_name) }}</label>
+                        </div>
+                    </div>
 
-                <div class="form-group">
-                    <label class="color888 title12">{{ form_label(form.name) }}</label>
-                    <label class="title16">{{ form_widget(form.name) }}</label>
-                </div>
+                    <div class="col-lg-12 col-sm-12">
+                        <div class="form-group">
+                            <label class="color888 title12">{{ form_label(form.name) }}</label>
+                            <label class="title16">{{ form_widget(form.name) }}</label>
+                        </div>
+                    </div>
 
-                <div class="form-group">
-                    <label class="color888 title12">{{ form_label(form.zip) }}</label>
-                    <label class="title16">{{ form_widget(form.zip.zip01) }}-{{ form_widget(form.zip.zip02) }}</label>
-                </div>
+                    <div class="col-lg-12 col-sm-12">
+                        <div class="form-group">
+                            <label class="color888 title12">{{ form_label(form.zip) }}</label>
+                            <label class="title16">{{ form_widget(form.zip.zip01) }}-{{ form_widget(form.zip.zip02) }}</label>
+                        </div>
+                    </div>
 
-                <div class="form-group">
-                    <label class="color888 title12">{{ form_label(form.address) }}</label>
-                    <label class="title16">{{ form_widget(form.address) }}</label>
-                </div>
+                    <div class="col-lg-12 col-sm-12">
+                        <div class="form-group">
+                            <label class="color888 title12">{{ form_label(form.address) }}</label>
+                            <label class="title16">{{ form_widget(form.address) }}</label>
+                        </div>
+                    </div>
 
-                <div class="form-group">
-                    <label class="color888 title12">{{ form_label(form.tel) }}</label>
-                    <label class="title16">{{ form_widget(form.tel) }}</label>
-                </div>
+                    <div class="col-lg-12 col-sm-12">
+                        <div class="form-group">
+                            <label class="color888 title12">{{ form_label(form.tel) }}</label>
+                            <label class="title16">{{ form_widget(form.tel) }}</label>
+                        </div>
+                    </div>
 
-                <div class="form-group">
-                    <label class="color888 title12">{{ form_label(form.email) }}</label>
-                    <label class="title16">
-                        {{ form_widget(form.email.first) }}
-                        {{ form_widget(form.email.second, {freeze_display_text: false}) }}
-                    </label>
-                </div>
-            </div>
-                <div class="col-sm-12">
-                    <div class="form-group">
-                    <label>{{ form_label(form2.bus_stop) }}</label>
-                    {{ form_errors(form2.bus_stop) }}
-                    {{ form_widget(form2.bus_stop, {'attr': {'class': 'select'}}) }}
+                    <div class="col-lg-12 col-sm-12">
+                        <div class="form-group">
+                            <label class="color888 title12">{{ form_label(form.email) }}</label>
+                            <label class="title16">
+                                {{ form_widget(form.email.first) }}
+                                {{ form_widget(form.email.second, {freeze_display_text: false}) }}
+                            </label>
+                        </div>
+                    </div>
                     </div>
                 </div>
 
-                <div class="col-sm-12">
-                {% for passwordField in form2.password %}
-                <div class="form-group">
-                    {{ form_label(form2.password) }}{% if loop.last %}（確認用）{% endif %}
-                    {#<label class="margin-left13">パスワード（英数字12文字〜30文字）</label>#}
-                    {{ form_errors(passwordField) }}
-                    {{ form_widget(passwordField, {type : 'password'}) }}
+                <div class="col-lg-12 col-sm-12">
+                    <div class="form-group">
+                        <label>{{ form_label(form2.bus_stop) }}</label>
+                        {{ form_errors(form2.bus_stop) }}
+                        {{ form_widget(form2.bus_stop, {'attr': {'class': 'select'}}) }}
+                    </div>
                 </div>
-                    {#<label class="margin-left13">パスワード（確認用）</label>#}
-                {% endfor %}
+
+                <div class="col-lg-12 col-sm-12">
+                    {% for passwordField in form2.password %}
+                        <div class="form-group">
+                            {{ form_label(form2.password) }}{% if loop.last %}（確認用）{% endif %}
+                            {{ form_errors(passwordField) }}
+                            {{ form_widget(passwordField, {type : 'password'}) }}
+                        </div>
+                    {% endfor %}
                 </div>
                 <button type="submit" class="btn btn-inactive margin-left13">プロフィール入力に進む</button>
             </form>
