--- a/src/Eccube/Resource/template/default/Farm/service_signup.twig
+++ b/src/Eccube/Resource/template/default/Farm/service_signup.twig
@@ -8,6 +8,7 @@
 {% extends 'default_frame.twig' %}
 {% set body_class = ' ' %}
 {% block javascript %}
+    <script src="//yubinbango.github.io/yubinbango/yubinbango.js" charset="UTF-8"></script>
 {% endblock %}
 {% block main %}
     <style type="text/css">
@@ -24,7 +25,8 @@
             <p class="title12">やさいバスは現在、静岡県内の方のみ</p>
             <p class="title12">利用申請を受け付けております</p>
             <p class="title12">対応地域拡大までしばらくお待ちください</p>
-            <form id="service-form" method="post" action="{{ url('farm_service') }}">
+            <form id="service-form" method="post" action="{{ url('farm_service') }}" class="h-adr">
+                <span class="p-country-name" style="display:none;">Japan</span>
                 <input type="hidden" name="mode" value="register"/>
                 {{ form_widget(form._token) }}
                 <div class="col-lg-12 col-sm-12 col-xs-12">
@@ -65,20 +67,28 @@
                         {{ form_errors(form.zip.zip01) }}
                         {{ form_errors(form.zip.zip02) }}
                         <div class="row">
-                        {% for zip in form.zip %}
-                            <p class="col-sm-6 col-xs-6">
-                            {{ form_widget(zip) }}
-                            </p>
-                        {% endfor %}
+                            {% for zip in form.zip %}
+                                <p class="col-sm-6 col-xs-6">
+                                    {{ form_widget(zip, {'attr': {'class' :"p-postal-code"}}) }}
+                                </p>
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-12 col-sm-12 col-xs-12 inline-block" >
+                    <label>{{ form_label(form.address) }}</label>
+                    <div class="form-inline form-group input_zip">
+                        {{ form_errors(form.address.pref) }}
+                        {{ form_widget(form.address.pref, {'attr': {'class' :"p-region-id"}}) }}
+                    </div>
                     <div class="form-group">
-                        <label>{{ form_label(form.address) }}</label>
-                        {{ form_errors(form.address) }}
-                        {{ form_widget(form.address) }}
+                        {{ form_errors(form.address.addr01) }}
+                        {{ form_widget(form.address.addr01, {'attr': {'placeholder': '市区町村名 (例：千代田区神田神保町)', 'class': 'p-locality p-street-address' }}) }}
+                    </div>
+                    <div class="form-group">
+                        {{ form_errors(form.address.addr02) }}
+                        {{ form_widget(form.address.addr02, {'attr': {'placeholder': '番地・ビル名 (例：1-3-5)', 'class' : 'p-extended-address' }}) }}
                     </div>
                 </div>
 
