--- a/src/Eccube/Resource/template/default/Mypage/login.twig
+++ b/src/Eccube/Resource/template/default/Mypage/login.twig
@@ -24,59 +24,59 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 {% set body_class = 'mypage' %}
 
 {% block main %}
-    <h1 class="page-heading">ログイン</h1>
-    <div class="container-fluid">
-        <form name="login_mypage" id="login_mypage" method="post" action="{{ url('login_check') }}" onsubmit="return eccube.checkLoginFormInputted('login_mypage')" {{ form_enctype(form) }}>
-            {% if app.session.flashBag.has('eccube.login.target.path') %}
-                {% for targetPath in app.session.flashBag.get('eccube.login.target.path') %}
-                    <input type="hidden" name="_target_path" value="{{ targetPath }}" />
-                {% endfor %}
-            {% endif %}
-            <div id="login_box" class="row">
-                <div id="mypage_login_wrap" class="col-sm-8 col-sm-offset-2">
-                    <div id="mypage_login_box" class="column">
+    <div class="wrapper">
+        <div class="farmer-header">
+            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="margin-top10">
+        </div>
 
-                        <div id="mypage_login_box__body" class="column_inner clearfix">
-                            <div class="icon"><svg class="cb cb-user-circle"><use xlink:href="#cb-user-circle" /></svg></div>
-                            <div id="mypage_login_box__login_email" class="form-group">
-                                {{ form_widget(form.login_email, {'attr': {'style' : 'ime-mode: disabled;', 'placeholder' : 'メールアドレス', 'autofocus': true}}) }}
-                            </div>
-                            <div id="mypage_login_box__login_pass" class="form-group">
-                                {{ form_widget(form.login_pass,  {'attr': {'placeholder' : 'パスワード' }}) }}
-                                {% if BaseInfo.option_remember_me %}
-                                    {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-                                        <input id="mypage_login_box__login_memory" type="hidden" name="login_memory" value="1">
-                                    {% else %}
-                                        {{ form_widget(form.login_memory) }}
-                                    {% endif %}
-                                {% endif %}
-                            </div>
-                            <div class="extra-form form-group">
-                                {% for f in form.getIterator %}
-                                    {% if f.vars.name matches '[^plg*]' %}
-                                        {{ form_label(f) }}
-                                        {{ form_widget(f) }}
-                                        {{ form_errors(f) }}
-                                    {% endif %}
-                                {% endfor %}
-                            </div>
-                            {% if error %}
-                            <div id="mypage_login_box__error_message" class="form-group">
-                                <span class="text-danger">{{ error|trans|raw }}</span>
-                            </div>
-                            {% endif %}
-                            <div id="mypage_login__login_button" class="btn_area">
-                                <p><button type="submit" class="btn btn-info btn-block btn-lg">ログイン</button></p>
-                                <ul id="mypage_login__login_menu" >
-                                    <li><a href="{{ url('forgot') }}">ログイン情報をお忘れですか？</a></li>
-                                    <li><a href="{{ url('entry') }}">新規会員登録</a></li>
-                                </ul>
-                            </div>
+        <div id="service-form">
+            <form name="login_mypage" id="login_mypage" method="post" action="{{ url('login_check') }}" onsubmit="return eccube.checkLoginFormInputted('login_mypage')" {{ form_enctype(form) }}>
+                {% if app.session.flashBag.has('eccube.login.target.path') %}
+                    {% for targetPath in app.session.flashBag.get('eccube.login.target.path') %}
+                        <input type="hidden" name="_target_path" value="{{ targetPath }}" />
+                    {% endfor %}
+                {% endif %}
+                <div id="login_box" class="row">
+                    <div id="mypage_login_wrap" class="col-sm-12 col-xs-12">
+                        <div id="mypage_login_box__login_email" class="form-group">
+                            {{ form_label(form.login_email) }}
+                            {{ form_widget(form.login_email, {'attr': {'style' : 'ime-mode: disabled;', 'placeholder' : 'メールアドレス', 'autofocus': true}}) }}
                         </div>
+                        <div id="mypage_login_box__login_pass" class="form-group">
+                            {{ form_label(form.login_pass) }}
+                            {{ form_widget(form.login_pass,  {'attr': {'placeholder' : 'パスワード' }}) }}
+                            {% if BaseInfo.option_remember_me %}
+                                {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                                    <input id="mypage_login_box__login_memory" type="hidden" name="login_memory" value="1">
+                                {% else %}
+                                    {{ form_widget(form.login_memory) }}
+                                {% endif %}
+                            {% endif %}
+                        </div>
+                        <div class="extra-form form-group">
+                            {% for f in form.getIterator %}
+                                {% if f.vars.name matches '[^plg*]' %}
+                                    {{ form_label(f) }}
+                                    {{ form_widget(f) }}
+                                    {{ form_errors(f) }}
+                                {% endif %}
+                            {% endfor %}
+                        </div>
+
+                        <p class="text-align-right title12 margin-bottom15 margin-right10"><a href="{{ url('forgot') }}" class="color888">パスワードを忘れた場合 </a></p>
+                        <button type="submit" class="btn btn-inactive margin-left13">ログイン</button>
+
+                        {% if error %}
+                            <div class="col-sm-12 col-xs-12">
+                                <p class="has-error margin-top15 clearfix">
+                                    {{ error|trans|raw }}
+                                </p>
+                            </div>
+                        {% endif %}
                     </div>
-                </div><!-- /.col -->
-            </div><!-- /.row -->
-            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-        </form>
+                </div><!-- /.row -->
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+            </form>
+        </div>
     </div>
 {% endblock %}
