--- a/src/Eccube/Resource/template/default/Forgot/complete.twig
+++ b/src/Eccube/Resource/template/default/Forgot/complete.twig
@@ -22,27 +22,23 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 {% extends 'default_frame.twig' %}
 
 {% block main %}
-    <div id="contents" class="main_only">
-        <div class="container-fluid inner no-padding">
-            <div id="main">
-                <h1 class="page-heading">パスワード発行メールの送信 完了</h1>
-                <div id="complete_wrap" class="container-fluid">
-                    <div id="complete_box" class="row">
-                        <div id="complete_box__body" class="col-md-10 col-md-offset-1">
-                            <div id="complete_box__message" class="complete_message">
-                                <h2>パスワード再発行メールの送信が完了しました。</h2>
-                                <p>ご登録メールアドレスにパスワードを再発行するためのメールを送信いたしました。<br/>
+    <div class="wrapper">
+        <div class="farmer-header">
+            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="margin-top10">
+        </div>
+        <div id="service-form">
+            <div id="complete_box" class="row">
+                <div id="complete_box__body" class="col-sm-12 col-xs-12">
+                    <div id="complete_box__message" class="complete_message">
+                        <h2>パスワード再発行メールの送信が完了しました。</h2>
+                        <p>ご登録メールアドレスにパスワードを再発行するためのメールを送信いたしました。<br/>
                             メールの内容をご確認いただきますよう、お願いいたします。</p>
-                                <p>※メールが届かない場合はメールアドレスをご確認の上、再度お試しください。</p>
-                            </div>
-                        </div><!-- /.col -->
-                    </div><!-- /.row -->
-
-                </div>
-            </div>
+                        <p>※メールが届かない場合はメールアドレスをご確認の上、再度お試しください。</p>
+                    </div>
+                </div><!-- /.col -->
+            </div><!-- /.row -->
         </div>
     </div>
-
 {% endblock %}
 
 
