--- a/src/Eccube/Resource/template/default/Forgot/index.twig
+++ b/src/Eccube/Resource/template/default/Forgot/index.twig
@@ -22,49 +22,33 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 {% extends 'default_frame.twig' %}
 
 {% block main %}
-    <div id="contents" class="main_only">
-        <div class="container-fluid inner no-padding">
-            <div id="main">
-                <h1 class="page-heading">パスワードの再発行</h1>
-                <div id="top_wrap" class="container-fluid">
-                    <div id="top_box" class="row">
-                        <div id="top_box__body" class="col-md-10 col-md-offset-1">
-                            <p>ご登録時のメールアドレスを入力して「次へ」ボタンをクリックしてください。</p>
-                            <p>※新しくパスワードを発行いたしますので、お忘れになったパスワードはご利用できなくなります。</p>
-                            <form name="form1" id="form1" method="post" action="{{ url('forgot') }}">
-                                {{ form_widget(form._token) }}
-                                <div id="top_box__body_inner" class="dl_table">
-                                    <dl id="top_box__login_email">
-                                        <dt>{{ form_label(form.login_email) }}</dt>
-                                        <dd>
-                                            <div class="form-group">
-                                                {{ form_widget(form.login_email) }}
-                                                {{ form_errors(form.login_email) }}
-                                            </div>
-                                        </dd>
-                                    </dl>
-                                </div>
-                                {% for f in form %}
-                                    {% if f.vars.name matches '[^plg*]' %}
-                                        <div class="extra-form dl_table">
-                                            {{ form_row(f) }}
-                                        </div>
-                                    {% endif %}
-                                {% endfor %}
-                                <div id="top_box__footer" class="row no-padding">
-                                <div id="top_box__next_button" class="btn_group col-sm-offset-4 col-sm-4">
-                                    <p><button type="submit" class="btn btn-primary btn-block">次のページへ</button></p>
-                                </div>
-                                </div>
-                            </form>
-                        </div><!-- /.col -->
-                    </div><!-- /.row -->
-
+    <div class="wrapper">
+        <div class="farmer-header">
+            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="margin-top10">
+        </div>
+        <div id="service-form">
+            <form name="form1" id="form1" method="post" action="{{ url('forgot') }}">
+                {{ form_widget(form._token) }}
+                <div id="top_box__body_inner" class="col-sm-12 col-xs-12">
+                    <div class="form-group">
+                        {{ form_label(form.login_email) }}
+                        {{ form_widget(form.login_email) }}
+                        {{ form_errors(form.login_email) }}
+                    </div>
                 </div>
-            </div>
+                {% for f in form %}
+                    {% if f.vars.name matches '[^plg*]' %}
+                        <div class="extra-form dl_table">
+                            {{ form_row(f) }}
+                        </div>
+                    {% endif %}
+                {% endfor %}
+
+                <button type="submit" class="btn btn-inactive margin-left13">送信する</button>
+                <p class="margin-top15 clearfix title12 text-alight-center">ご登録に使用したメールアドレス宛に</p>
+                <p class="title12 text-alight-center">パスワード再設定用のURLが記載されたメールが届きます</p>
+            </form>
         </div>
     </div>
 
 {% endblock %}
-
-
