--- a/src/Eccube/Resource/template/default/Forgot/reset.twig
+++ b/src/Eccube/Resource/template/default/Forgot/reset.twig
@@ -22,25 +22,18 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 {% extends 'default_frame.twig' %}
 
 {% block main %}
-
-    <div id="contents" class="main_only">
-        <div id="reset_wrap" class="container-fluid inner no-padding">
-            <div id="main">
-                <h1 class="page-heading">パスワード変更(完了ページ)</h1>
-                <div id="reset_box" class="container-fluid">
-                    <div id="reset_box__body" class="row">
-                        <div id="reset_box__message" class="col-md-10 col-md-offset-1">
-                            <h2>新しいパスワードが送信されました。</h2>
-                            <p>新しいパスワード送り致しましたので、メールをご確認ください。</p>
-                            <p>今後ともご愛顧賜りますようよろしくお願い申し上げます。</p>
-                        </div><!-- /.col -->
-                    </div><!-- /.row -->
-
-                </div>
-            </div>
+    <div class="wrapper">
+        <div class="farmer-header">
+            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="margin-top10">
+        </div>
+        <div id="service-form">
+            <div id="reset_box__body" class="row">
+                <div id="reset_box__message" class="col-sm-12 col-xs-12">
+                    <h2>新しいパスワードが送信されました。</h2>
+                    <p>新しいパスワード送り致しましたので、メールをご確認ください。</p>
+                    <p>今後ともご愛顧賜りますようよろしくお願い申し上げます。</p>
+                </div><!-- /.col -->
+            </div><!-- /.row -->
         </div>
     </div>
-
 {% endblock %}
-
-
