Add profile setting function

--- a/html/template/default/yasai-bus/css/style.css
+++ b/html/template/default/yasai-bus/css/style.css
@@ -1461,7 +1461,7 @@ img {
 }
 
 .setting-btn {
-    width: 345px;
+    width: 96% !important;
     height: 44px;
     background-color: #344250 !important;
     color: white !important;
