--- a/src/Eccube/Resource/template/default/Farm/service_profile_setting.twig
+++ b/src/Eccube/Resource/template/default/Farm/service_profile_setting.twig
@@ -1,8 +1,8 @@
 {#
  # Created by PhpStorm.
  # User: lqdung1992@gmail.com
- # Date: 02/04/2018
- # Time: 2:50 PM
+ # Date: 02/10/2018
+ # Time: 16:46 PM
  #}
 
 {% extends 'default_frame.twig' %}
@@ -17,26 +17,17 @@
         }
     </style>
     <div class="wrapper" id="service-regist-receiver-wrapper">
-        <div class="farmer-header">
-            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="margin-top10">
+        <div class="farmer-new-header">
+            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-menu.svg" class="hambuger-menu-reicever">
+            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-home.svg" class="nav-home">
+            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="logo-svg">
         </div>
 
         <div id="service-wrapper">
-            <p class="title12">やさいバスは現在、静岡県内の方のみ</p>
-            <p class="title12">利用申請を受け付けております</p>
-            <p class="title12">対応地域拡大までしばらくお待ちください</p>
-            <form id="service-form" method="post" action="{{ url('farm_service') }}" class="h-adr">
+            <form id="service-form" method="post" action="{{ url('farm_service_profile_setting') }}" class="h-adr">
                 <span class="p-country-name" style="display:none;">Japan</span>
-                <input type="hidden" name="mode" value="register"/>
                 {{ form_widget(form._token) }}
-                <div class="col-lg-12 col-sm-12 col-xs-12">
-                    <div class="form-group">
-                        {{ form_label(form.customer_role) }}
-                        {{ form_errors(form.customer_role) }}
-                        {{ form_widget(form.customer_role, {'attr': {'class': 'select'}}) }}
-                    </div>
-                </div>
-
+                <div class="row">
                 <div class="col-lg-12 col-sm-12 col-xs-12">
                     <div class="form-group">
                         {{ form_label(form.company_name) }}
@@ -63,7 +54,7 @@
 
                 <div class="col-lg-12 col-sm-12 col-xs-12 inline-block" >
                     <div class="form-group">
-                        <label class="display-block">{{ form_label(form.zip) }}
+                        {{ form_label(form.zip) }}
                         {{ form_errors(form.zip.zip01) }}
                         {{ form_errors(form.zip.zip02) }}
                         <div class="row">
@@ -106,23 +97,12 @@
                     </div>
                 </div>
 
-                <div class="col-lg-12 col-sm-12 col-xs-12">
-                    {% for emailField in form.email %}
-                        {{ form_label(form.email) }}{% if loop.last %}（確認用）{% endif %}
-                        <div class="form-group {% if emailField.vars.errors is not empty %}has-error{% endif %}">
-                            {{ form_errors(emailField) }}
-                            {{ form_widget(emailField, { type : 'email'}) }}
-                        </div>
-                    {% endfor %}
+                <div class="col-sm-12 col-xs-12">
+                    <button type="submit" class="btn btn-default display-block setting-btn">変更を申請する</button>
+                    <p class="text-alight-center margin-top15 title12">変更内容は事務局で内容を確認後に反映されます</p>
+                </div>
                 </div>
 
-                <p class="title12">申し込みの際には利用規約・プライバシーポリシー</p>
-                <p class="title12">の 確認をお願いいたします</p>
-                <p class="title12">
-                    <a href="#" class="color888 margin-right15">利用規約</a>
-                    <a href="#" class="color888 margin-left13">プライバシーポリシー</a>
-                </p>
-                <button type="submit" class="btn btn-inactive">同意して申し込みをする</button>
             </form>
         </div>
     </div>
