--- a/src/Eccube/Resource/template/default/default_frame.twig
+++ b/src/Eccube/Resource/template/default/default_frame.twig
@@ -75,8 +75,6 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                 {{ include('block.twig', {'Blocks': PageLayout.Header}) }}
                 {# ▲上ナビ #}
             {% endif %}
-            {# ▲HeaderInternal COLUMN #}
-            <p id="btn_menu"><a class="nav-trigger" href="#nav">Menu<span></span></a></p>
         </div>
     </header>
 
@@ -90,61 +88,6 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                 {# ▲上ナビ #}
             {% endif %}
             {# ▲TOP COLUMN #}
-        </div>
-
-        <div class="container-fluid inner">
-            {# ▼LEFT COLUMN #}
-            {% if PageLayout.SideLeft %}
-                <div id="side_left" class="side">
-                    {# ▼左ナビ #}
-                    {{ include('block.twig', {'Blocks': PageLayout.SideLeft}) }}
-                    {# ▲左ナビ #}
-                </div>
-            {% endif %}
-            {# ▲LEFT COLUMN #}
-
-            <div id="main">
-                {# ▼メイン上部 #}
-                {% if PageLayout.MainTop %}
-                    <div id="main_top">
-                        {{ include('block.twig', {'Blocks': PageLayout.MainTop}) }}
-                    </div>
-                {% endif %}
-                {# ▲メイン上部 #}
-
-                <div id="main_middle">
-                    {% block main %}{% endblock %}
-                </div>
-
-                {# ▼メイン下部 #}
-                {% if PageLayout.MainBottom %}
-                    <div id="main_bottom">
-                        {{ include('block.twig', {'Blocks': PageLayout.MainBottom}) }}
-                    </div>
-                {% endif %}
-                {# ▲メイン下部 #}
-            </div>
-
-            {# ▼RIGHT COLUMN #}
-            {% if PageLayout.SideRight %}
-                <div id="side_right" class="side">
-                    {# ▼右ナビ #}
-                    {{ include('block.twig', {'Blocks': PageLayout.SideRight}) }}
-                    {# ▲右ナビ #}
-                </div>
-            {% endif %}
-            {# ▲RIGHT COLUMN #}
-
-            {# ▼BOTTOM COLUMN #}
-            {% if PageLayout.ContentsBottom %}
-                <div id="contents_bottom">
-                    {# ▼下ナビ #}
-                    {{ include('block.twig', {'Blocks': PageLayout.ContentsBottom}) }}
-                    {# ▲下ナビ #}
-                </div>
-            {% endif %}
-            {# ▲BOTTOM COLUMN #}
-
         </div>
 
         <footer id="footer">
@@ -182,7 +125,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
             type: 'GET',
             dataType: 'html',
         }).done(function(data){
-            $('body').prepend(data);
+            //$('body').prepend(data);
         }).fail(function(data){
         });
     });
