--- a/app/template/default/Block/top_main_content.twig
+++ b/app/template/default/Block/top_main_content.twig
@@ -20,8 +20,8 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #}
 <div id="service-top-img">
-    <img src="{{ app.config.front_urlpath }}/yasai-bus/img/rau5.jpg">
-    <button class="btn btn-success btn-labelmedium">登録を申し込む</button>
+    {#<img src="{{ app.config.front_urlpath }}/yasai-bus/img/rau5.jpg" class="pc-top-img">#}
+    <a href="{{ url('farm_service') }}"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/top.png" class="sp-top-img"></a>
 </div>
 
 <div>
@@ -47,8 +47,8 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
     </div>
 
     <div id="service-map">
-        <img src="{{ app.config.front_urlpath }}/yasai-bus/img/rau5.jpg">
-        <button class="btn btn-success btn-labelmedium">詳しいバス停地図を視る</button>
+        {#<img src="{{ app.config.front_urlpath }}/yasai-bus/img/rau5.jpg" class="pc-top-img">#}
+        <img src="{{ app.config.front_urlpath }}/yasai-bus/img/yasai-bus.png" class="sp-top-img">
     </div>
 
     <div id="service-org-chat">
@@ -58,7 +58,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
             <img src="{{ app.config.front_urlpath }}/yasai-bus/img/asset/asset4.PNG">
         </p>
         <img src="{{ app.config.front_urlpath }}/yasai-bus/img/org-chat.PNG" class="display-block org-chat-icon">
-        <button class="btn btn-success btn-labelmedium">登録を申し込む</button>
+        <a href="{{ url('farm_service') }}"><button class="btn btn-success btn-labelmedium">登録を申し込む</button></a>
     </div>
 
     <div id="product-list" class="clearfix">
