--- a/src/Eccube/Resource/template/default/Farm/farmer_setting_change.twig
+++ b/src/Eccube/Resource/template/default/Farm/farmer_setting_change.twig
@@ -45,7 +45,9 @@
                             </div>
                         {% endfor %}
                     </div>
-                    <button type="submit" class="btn btn-inactive margin-left13">変更する</button>
+                    <div class="col-sm-12 col-xs-12">
+                    <button type="submit" class="btn btn-inactive">変更する</button>
+                    </div>
                 </div>
             </form>
         </div>
