--- a/src/Eccube/Resource/template/default/Farm/service_register.twig
+++ b/src/Eccube/Resource/template/default/Farm/service_register.twig
@@ -19,51 +19,51 @@
             <form id="service-form" method="post" action="{{ url('farm_service') }}">
                 <input type="hidden" name="mode" value="complete"/>
                 {{ form_widget(form._token) }}
-                <div id="confirm-area" class="col-lg-12">
+                <div id="confirm-area" class="col-sm-12 col-xs-12">
                     <div class="row">
-                    <div class="col-lg-12 col-sm-12">
+                    <div class="col-sm-12 col-xs-12">
                         <div class="form-group">
                             <label class="color888 title12">{{ form_label(form.customer_role) }}</label>
                             <label class="title16">{{ form_widget(form.customer_role) }}</label>
                         </div>
                     </div>
 
-                    <div class="col-lg-12 col-sm-12">
+                    <div class="col-sm-12 col-xs-12">
                         <div class="form-group">
                             <label class="color888 title12">{{ form_label(form.company_name) }}</label>
                             <label class="title16">{{ form_widget(form.company_name) }}</label>
                         </div>
                     </div>
 
-                    <div class="col-lg-12 col-sm-12">
+                    <div class="col-sm-12 col-xs-12">
                         <div class="form-group">
                             <label class="color888 title12">{{ form_label(form.name) }}</label>
                             <label class="title16">{{ form_widget(form.name) }}</label>
                         </div>
                     </div>
 
-                    <div class="col-lg-12 col-sm-12">
+                    <div class="col-sm-12 col-xs-12">
                         <div class="form-group">
                             <label class="color888 title12">{{ form_label(form.zip) }}</label>
                             <label class="title16">{{ form_widget(form.zip.zip01) }}-{{ form_widget(form.zip.zip02) }}</label>
                         </div>
                     </div>
 
-                    <div class="col-lg-12 col-sm-12">
+                    <div class="col-sm-12 col-xs-12">
                         <div class="form-group">
                             <label class="color888 title12">{{ form_label(form.address) }}</label>
                             <label class="title16">{{ form_widget(form.address) }}</label>
                         </div>
                     </div>
 
-                    <div class="col-lg-12 col-sm-12">
+                    <div class="col-sm-12 col-xs-12">
                         <div class="form-group">
                             <label class="color888 title12">{{ form_label(form.tel) }}</label>
                             <label class="title16">{{ form_widget(form.tel) }}</label>
                         </div>
                     </div>
 
-                    <div class="col-lg-12 col-sm-12">
+                    <div class="col-sm-12 col-xs-12">
                         <div class="form-group">
                             <label class="color888 title12">{{ form_label(form.email) }}</label>
                             <label class="title16">
@@ -75,7 +75,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-12 col-sm-12">
+                <div class="col-sm-12 col-xs-12">
                     <div class="form-group">
                         <label>{{ form_label(form2.bus_stop) }}</label>
                         {{ form_errors(form2.bus_stop) }}
@@ -83,7 +83,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-12 col-sm-12">
+                <div class="col-sm-12 col-xs-12">
                     {% for passwordField in form2.password %}
                         <div class="form-group">
                             {{ form_label(form2.password) }}{% if loop.last %}（確認用）{% endif %}
@@ -92,7 +92,10 @@
                         </div>
                     {% endfor %}
                 </div>
-                <button type="submit" class="btn btn-inactive margin-left13">プロフィール入力に進む</button>
+
+                <div class="col-sm-12 col-xs-12">
+                <button type="submit" class="btn btn-inactive">プロフィール入力に進む</button>
+                </div>
             </form>
         </div>
     </div>
