--- a/src/Eccube/Resource/template/default/Farm/service_signup.twig
+++ b/src/Eccube/Resource/template/default/Farm/service_signup.twig
@@ -21,7 +21,7 @@
             <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="margin-top10">
         </div>
 
-        <div id="service-wrapper">
+        <div id="service-wrapper" class="row">
             <p class="title12">やさいバスは現在、静岡県内の方のみ</p>
             <p class="title12">利用申請を受け付けております</p>
             <p class="title12">対応地域拡大までしばらくお待ちください</p>
@@ -122,7 +122,9 @@
                     <a href="#" class="color888 margin-right15">利用規約</a>
                     <a href="#" class="color888 margin-left13">プライバシーポリシー</a>
                 </p>
+                <div class="col-sm-12 col-xs-12">
                 <button type="submit" class="btn btn-inactive">同意して申し込みをする</button>
+                </div>
             </form>
         </div>
     </div>
