--- a/src/Eccube/Resource/template/default/Farm/farm_profile_edit.twig
+++ b/src/Eccube/Resource/template/default/Farm/farm_profile_edit.twig
@@ -14,8 +14,7 @@
     <style type="text/css">
         #upload-zone .cover .cover-image {
             width: 100%;
-            height: 211px;
-            display: none;
+            height: 400px;
         }
         .ui-state-highlight {
             height: 148px;
@@ -25,7 +24,7 @@
         #thumb {
             position: absolute;
             right: 5px;
-            top: 67%;
+            top: 80%;
         }
 
         ul#thumb li {
@@ -34,6 +33,8 @@
             position: relative;
             margin-right: 5px;
             border-radius: 2.3px;
+            width: 60px;
+            height: 60px;
         }
 
         ul#thumb li img {
@@ -42,22 +43,8 @@
             border-radius: 2.3px;
         }
 
-        /*ul#thumb li#upload-camera img.upload-list-camera {*/
-            /*width: 24px;*/
-            /*height: 22px;*/
-            /*top: 34%;*/
-            /*left: 29%;*/
-            /*position: absolute;*/
-        /*}*/
-
         ul#thumb li#upload-camera {
             background-color: #FFFFFF;
-            /*!*position: relative;*!*/
-            /*border-radius: 3px;*/
-            /*background-color: #344250;*/
-            /*width: 60px;*/
-            /*height: 60px;*/
-            /*!*top: -17%;*!*/
         }
 
         ul#thumb li.ui-state-default .delete-image {
@@ -95,7 +82,6 @@
         }
 
         #upload-zone {
-            height: 211px;
             background-color: #e6e6e6;
             position: relative;
         }
@@ -107,6 +93,14 @@
 
         #upload-zone p {
             position: relative;
+        }
+
+        #profile {
+            min-height: 300px;
+        }
+
+        #profile-change-wrapper {
+            padding: auto;
         }
     </style>
 {% endblock stylesheet %}
@@ -313,15 +307,15 @@
     </script>
 {% endblock %}
 {% block main %}
-    <div class="wrapper" id="service-regist-receiver-wrapper">
+    <div class="wrapper" id="profile-change-wrapper">
         <div class="farmer-new-header">
             <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-menu.svg" class="hambuger-menu-reicever">
-            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-home.svg" class="nav-home">
-            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="logo-svg">
+            <a href="{{ url('top') }}"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-home.svg" class="nav-home"></a>
+            <a href="{{ url('top') }}"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="logo-svg"></a>
         </div>
         <form id="service-form" method="post" action="{{ url('farm_profile_edit') }}" enctype="multipart/form-data">
             {{ form_widget(form._token) }}
-            <div id="upload-zone">
+            <div id="upload-zone" class="clearfix">
                 <div class="cover">
                     <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/camera.svg" class="cover-image">
                 </div>
@@ -341,7 +335,7 @@
                 </ul>
             </div>
 
-            <div id="profile">
+            <div id="profile" >
                 <div id="receiver-profile" class="col-sm-12 col-xs-12 clearfix">
                     {% set img = app.config.front_urlpath ~ '/yasai-bus/img/camera.PNG' %}
                     {% if profile_image %}
@@ -359,7 +353,7 @@
                     {{ form_widget(form.note, {'attr': {'class': 'color888', 'placeholder': '紹介文を入力...100文字'}}) }}
                 </div>
                 <div class="col-sm-12 col-xs-12">
-                <button type="submit" class="btn btn-inactive">やさいバスの利用をはじめる</button>
+                <button type="submit" class="btn btn-inactive">プロフィールを保存</button>
                 </div>
             </div>
         </form>
